--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <label class="block text-gray-700 font-medium">URL de la página:</label>
         <p class="text-sm text-gray-500 italic">Ejemplo : https://www.adidas.es/zapatillas-hombre</p>
+        <p class="text-sm text-gray-500 italic">Ejemplo : https://es.wikipedia.org/wiki/JavaScript</p>
         <input 
             type="url" id="urlInput" 
             placeholder="Ej: https://www.adidas.es/zapatillas-hombre" 
@@ -25,6 +26,7 @@
         <p class="text-sm text-gray-500 italic">Ejemplo: //div[@data-testid='primary-price']</p>
         <p class="text-sm text-gray-500 italic">Ejemplo: //p[@data-testid='product-card-title']</p>
         <p class="text-sm text-gray-500 italic">Ejemplo: //img[@data-testid='product-card-primary-image']</p>
+        <p class="text-sm text-gray-500 italic">Ejemplo: //h1</p>
         <input 
             type="text" id="xpathInput" 
             placeholder="//div[@data-testid='primary-price']" 
